Fix slideshow not starting

Make sure we go in view mode when started with "-" and when "Start Slideshow"
is selected from menu.

BUG: 304782